--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    color: black;
+    // color: black;
     text-decoration: none;
     list-style-type: none;
     box-sizing: border-box;
@@ -20,18 +20,18 @@ body {
     padding: 60px 20px;
 }
 
-li {
-    line-height: 1em;
-}
-
 a {
     height: auto;
+
+    &:visited {
+        color: black;
+    }
 }
 
 span {
     display: inline-block;
 }
 
-*:not(.katex *) {
-    font-family: 'Quicksand', "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", 'メイリオ' , Meiryo , Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+*:not(.katex *, pre code *) {
+    font-family: 'Inter', "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", 'メイリオ' , Meiryo , Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
