--- a/themes/myTheme/layouts/partials/footer.html
+++ b/themes/myTheme/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <script src="/js/spHeaderMenu.js"></script>
+<script src="/js/sideMenu.js"></script>
 <footer>
     <div class="container">
         <p class="copyright">&copy; 2023 OpenStudy</p>
