--- a/assets/sass/article.scss
+++ b/assets/sass/article.scss
@@ -1,13 +1,22 @@
 main {
     display: flex;
+    height: 100vh;
+    overflow: hidden;
 
     nav.tree {
         // border: solid #96ffff 2px;
         width: 350px;
+        max-height: 100vh;
+        overflow: hidden;
+        flex: 1;
+
+        &:hover {
+            overflow: auto;
+        }
 
         h3 {
             font-size: 32px;
-            padding: 6px 12px;
+            padding: 18px 12px 10px;
         }
 
         > ul {
@@ -89,6 +98,9 @@ main {
 
     .articleSide {
         width: calc(100% - 350px);
+        max-height: 100vh;
+        overflow: auto;
+        flex: 2;
 
         .dates {
             display: flex;
@@ -112,6 +124,7 @@ main {
         .container {
             max-width: 100%;
             padding: 0;
+            height: 150vh;
 
             aside {
                 // border: solid #ffd2bf 2px;
@@ -124,6 +137,8 @@ main {
                 .views-and-thanks {
                     margin: 0 20px;
                     display: flex;
+                    justify-content: center;
+                    align-items: end;
 
                     .views {
                         font-size: 22px;
@@ -141,13 +156,17 @@ main {
                     margin: 0 20px;
                     
                     .contributors-label {
-                        font-size: 18px;
+                        font-size: 16px;
                         font-weight: 600;
+                        margin: 4px 0;
+                        color: #666;
 
                         .personNum {
-                            padding: 6px;
+                            color: #000;
+                            padding: 2px 6px;
                             background-color: #eee;
                             border-radius: 9999px;
+                            font-family: 'Roboto Mono', monospace;
                         }
                     }
 
@@ -156,8 +175,8 @@ main {
 
                         img {
                             display: block;
-                            width: 44px;
-                            height: 44px;
+                            width: 42px;
+                            height: 42px;
                             margin: 0 -6px 0 0;
                             border-radius: 50%;
                             border: solid 1px #fff;
@@ -175,20 +194,83 @@ main {
                 .button {
                     margin: 0 20px;
                     display: flex;
+                    align-items: end;
 
                     .give-thanks {
-                        padding: 8px 14px;
+                        padding: 8px 10px;
                         color: red;
-                        margin: 24px 6px;
+                        margin: 0 6px;
                         border-radius: 8px;
-                        box-shadow: 0px 0px 8px 4px #ddd;
+                        box-shadow: 1px 2px 8px 2px #ddd;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        i {
+                            padding-right: 4px;
+                        }
                     }
 
                     .link-to-repo {
-                        padding: 8px 14px;
-                        margin: 24px 6px;
+                        padding: 8px 10px;
+                        margin: 0 6px;
                         border-radius: 8px;
-                        box-shadow: 0px 0px 8px 4px #ddd;
+                        box-shadow: 1px 2px 8px 2px #ddd;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        i {
+                            padding-right: 6px;
+                        }
+
+                        span {
+                            line-height: 1.2em;
+                        }
+                    }
+                }
+            }
+
+            ul.tags {
+                display: flex;
+                margin: 14px 0;
+                list-style-type: none;
+                
+                > a {
+                    padding: 1px 6px;
+                    margin: 0 4px;
+                    border: solid 1px #ff2ea5aa;
+                    border-radius: 9999px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 12px;
+                    color: #ff2ea5;
+                    background-color: #ff2ea511;
+                }
+            }
+
+            .index {
+                h3 {
+                    font-size: 30px;
+                }
+
+                nav {
+                    > ul {
+                        margin: 40px 0;
+                        padding: 20px 30px 20px 10px;
+                    }
+    
+                    ul li {
+                        margin: 10px;
+    
+                        ul {
+                            margin: 0 0 0 30px;
+                        }
+    
+                        list-style-type: disc;
+                        line-height: 1.2em;
+                        word-wrap: break-word;
                     }
                 }
             }
@@ -212,17 +294,17 @@ main {
 
                 h2 {
                     margin: 60px 0 20px;
-                    font-size: 24px;
+                    font-size: 28px;
                 }
 
                 h3 {
-                    font-size: 18px;
+                    font-size: 24px;
                     margin: 30px 0 10px;
                 }
 
-                // > h4 {
-
-                // }
+                > h4 {
+                    font-size: 20px;
+                }
 
                 p {
                     padding: 16px 0;
@@ -248,36 +330,18 @@ main {
                     }
                 }
 
-                > ul {
-                    margin: 40px 0;
-                    padding: 20px 30px 20px 10px;
+                > ul, ol {
+                    margin: 20px 0;
+                    padding: 0 30px 0 10px;
                 }
 
-                ul li {
-                    margin: 10px;
+                ul li, ol li {
+                    margin: 8px;
 
-                    ul {
-                        margin: 0 0 0 30px;
+                    ul, ol {
+                        margin: 0 0 0 16px;
                     }
 
-                    list-style-type: disc;
-                    line-height: 1.2em;
-                    word-wrap: break-word;
-                }
-
-                > ol {
-                    margin: 40px 0;
-                    padding: 20px 30px 20px 10px;
-                }
-
-                ol li {
-                    margin: 10px;
-
-                    ol {
-                        margin: 0 0 0 30px;
-                    }
-
-                    list-style-type: decimal;
                     line-height: 1.2em;
                     word-wrap: break-word;
                 }
@@ -289,20 +353,20 @@ main {
                     margin: 10px 0;
 
                     code {
-                        span {
-                            font-family: 'Roboto Mono', monospace;
-                        }
+                        font-family: 'Roboto Mono', monospace;
                     }
                 }
 
-                .highlight {
+                > .highlight {
                     > pre {
                         padding: 24px;
                         margin: 0 0 10px;
-                        border-radius: 0 14px 14px 14px;
+                        border-radius: 14px;
 
                         code {
                             font-family: 'Roboto Mono', monospace;
+                            font-size: 14px;
+                            background-color: blue;
                         }
                     }
                 }
@@ -317,25 +381,32 @@ main {
                         padding: 8px 14px;
                         background: #444;
                         color: white;
+                    }
 
-                        figcaption.xCodeBlock_code {
-                            pre {
-                                padding: 4px;
-                                white-space: pre-wrap;
+                    .xCodeBlock_code {
+                        pre {
+                            padding: 24px;
+                            margin: 0 0 10px;
+                            border-radius: 0 14px 14px 14px;
+    
+                            code {
+                                font-family: 'Roboto Mono', monospace;
+                                font-size: 14px;
+                                background-color: blue;
                             }
                         }
                     }
                 }
 
-                figure:not(.xCodeBlock) {
-                    width: 100%;
+                p:has(img) {
+                    width: 60%;
 
                     img {
                         width: 100%;
                     }
 
-                    > figcaption {
-                        margin: 10px 0;
+                    em {
+                        display: block;
                         text-align: center;
                     }
                 }
@@ -347,6 +418,67 @@ main {
 
                     p {
                         padding: 4px 0;
+                    }
+                }
+
+                table {
+                    border-collapse: collapse;
+                    margin: 20px 0;
+
+                    thead {
+                        tr {
+                            th {
+                                border: solid 1px #888;
+                                padding: 10px 14px;
+                                font-weight: 600;
+                                background-color: #f6f6f6;
+                            }
+                        }
+                    }
+
+                    tbody {
+                        tr {
+                            td {
+                                border: solid 1px #888;
+                                padding: 10px 14px;
+                            }
+                        }
+                    }
+                }
+
+                .xAccordion {
+                    &_title {
+                        display: block;
+                        padding: 0.5rem 0.7rem;
+                        background: #ddd;
+                        cursor: pointer;
+
+                        &::after {
+                            font-size: smaller;
+                            color: #999;
+                            content: "（クリックで開閉）";
+                        }
+
+                        &:hover {
+                            background: #ccc;
+                        }
+                    }
+                    
+                    &_body {
+                        display: none;  /* デフォルトでは本文は非表示 */
+                        
+                      /* 本文の共通設定 */
+                        border: solid lightgray 1px;
+                        padding: 0.5rem;
+                    }
+                    
+                    input {
+                        display: none;  /* チェックボックスは非表示 */
+                        
+                      /* ラベルをクリックしたら本文を開く（表示） */
+                        &:checked + .xAccordion_body {
+                            display: block;
+                        }
                     }
                 }
             }
