--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -3,7 +3,7 @@
     margin: 0;
     // color: black;
     text-decoration: none;
-    list-style-type: none;
+    // list-style-type: none;
     box-sizing: border-box;
 }
 
@@ -12,6 +12,10 @@ body {
     position: relative;
     padding-bottom: 60px;
     min-height: 100vh;
+}
+
+ul {
+    list-style-type: disc;
 }
 
 .container {
