--- a/themes/myTheme/layouts/_default/list.html
+++ b/themes/myTheme/layouts/_default/list.html
@@ -1,11 +1,12 @@
 {{ define "main" }}
     <nav class="tree">
-        <a href="{{ (index .Site.Sections 1).RelPermalink }}">
-            <h3>{{ (index .Site.Sections 1).Title }}</h3>
-        </a>
-            {{- template "navTree" (dict "section" (index .Site.Sections 1) "current" .) }}
-        </a>
-    </nav>
+    {{ $hierarchy := partial "function/fetchHierarchy" . }}
+    <a href="{{ (index $hierarchy 1).RelPermalink }}">
+        <h3>{{ (index $hierarchy 1).Title }}</h3>
+    </a>
+        {{- template "navTree" (dict "section" (index $hierarchy 1) "current" .) }}
+    </a>
+</nav>
 
     <div class="articleSide">
         <div class="dates">
@@ -33,7 +34,7 @@
                 </div>
                 <div class="contributors">
                     <div class="contributors-label">
-                        <span class="description">作成・編集した人</span>
+                        <span class="description">作成した人</span>
                         <span class="personNum">163</span>
                     </div>
                     <div class="contributors-icon">
