Add damy searchBox

--- a/themes/myTheme/layouts/partials/header.html
+++ b/themes/myTheme/layouts/partials/header.html
@@ -17,9 +17,15 @@
         {{ else }}
             </a>
         {{ end }}
+        <div class="searchBox">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <span>Search</span>
+        </div>
         <ul>
+            <a href="/about/"><li>About</li></a>
             <a href="/contribute/"><li>記事を書く</li></a>
-            <a href="/about/"><li>OpenStudyとは</li></a>
+            <a href="/tags/"><li>タグを探す</li></a>
+            <a href="" class="icon"><i class="fa-brands fa-github"></i></a>
         </ul>
     </nav>
 
