--- a/themes/myTheme/layouts/_default/list.html
+++ b/themes/myTheme/layouts/_default/list.html
@@ -16,7 +16,8 @@
             </div>
             <div class="update-date">
                 <i class="fa-solid fa-arrows-rotate"></i>
-                <time>{{ .Date.Format "2006/01/02" }}</time>
+                <time>{{ .Lastmod.Format "2006/01/02" }}</time>
+                {{ print .Lastmod }}
             </div>
         </div>
         <h1>{{ .Title }}</h1>
