--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
     <h1>TOP PAGE</h1>
+    <p>{{ .Lastmod }}</p>
+    <p>{{ . }}</p>
     <ul>
         {{ range .Sections }}
             <a href="{{ .RelPermalink }}"><li>{{ .Title }}</li></a>
