--- a/themes/myTheme/layouts/partials/head.html
+++ b/themes/myTheme/layouts/partials/head.html
@@ -18,7 +18,9 @@
     <!-- Google Fonts for Logo -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- text -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- code -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 
     <!-- Basic CSS -->
@@ -34,10 +36,20 @@
         <link rel="stylesheet" href="{{ $style.Permalink }}">
     {{ end }}
 
-    <!-- Section and Article Page CSS -->
-    {{ if or .IsPage .IsSection }}
-        {{ $style := resources.Get "sass/article.scss" | toCSS | minify | fingerprint }}
+    <!-- 404 Page CSS -->
+    {{ if eq .Kind "404" }}
+        {{ $style := resources.Get "sass/404.scss" | toCSS | minify | fingerprint }}
         <link rel="stylesheet" href="{{ $style.Permalink }}">
+    {{ end }}
+
+    <!-- Section and Article Page CSS -->
+    {{ $include := slice "article" "breadcrumb" "alert" }}
+    {{ if or .IsPage .IsSection }}
+        {{ range $include }}
+            {{ $path := . | printf "sass/%s" | printf "%s.scss" }}
+            {{ $style := resources.Get $path | toCSS | minify | fingerprint }}
+            <link rel="stylesheet" href="{{ $style.Permalink }}">
+        {{ end }}
     {{ end }}
 
     <!-- Additional CSS -->
@@ -57,6 +69,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css" integrity="sha384-3UiQGuEI4TTMaFmGIZumfRPtfKQ3trwQE2JgosJxCnGmQpL/lJdjpcHkaaFwHlcI" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.js" integrity="sha384-G0zcxDFp5LWZtDuRMnBkk3EphCK1lhEf4UEyEM693ka574TZGwo4IWwS6QLzM/2t" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
+    <!-- enable `$ inline-katex $` -->
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             renderMathInElement(document.body, {
